<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="@dimen/margin_activity"
    tools:context=".MainActivity">

    <RelativeLayout
        android:id="@+id/loading"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:visibility="invisible">

        <ProgressBar
            android:id="@+id/spinner"
            style="@android:style/Widget.Material.ProgressBar.Large"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:indeterminate="true"
            android:minWidth="40dp"
            android:minHeight="40dp" />

        <TextView
            android:id="@+id/spinner_message"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/spinner"
            android:layout_centerInParent="true"
            android:layout_marginTop="@dimen/margin_normal"
            android:text="@string/text_spinner"
            android:textStyle="bold" />

    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/form"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:visibility="visible">

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/holder_layout"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/margin_normal"
            android:hint="@string/hint_holder_name"
            app:counterEnabled="true"
            app:counterMaxLength="22"
            app:endIconMode="clear_text"
            app:errorEnabled="true"
            app:helperText="@string/helper_text_holder_name"
            app:helperTextEnabled="true"
            app:startIconContentDescription="@string/content_description_holder_name"
            app:startIconDrawable="@drawable/ic_baseline_person_24">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/holder"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="text"
                android:maxLength="22"
                android:maxLines="1" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/card_number_layout"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/holder_layout"
            android:hint="@string/hint_card_number"
            app:counterEnabled="true"
            app:counterMaxLength="16"
            app:endIconMode="password_toggle"
            app:errorEnabled="true"
            app:startIconContentDescription="@string/content_description_card_number"
            app:startIconDrawable="@drawable/ic_baseline_credit_card_24">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/card_number"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="number"
                android:maxLength="16"
                android:maxLines="1" />

        </com.google.android.material.textfield.TextInputLayout>

        <RelativeLayout
            android:id="@+id/card_expiration_layout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/card_number_layout"
            android:layout_centerInParent="true"
            android:layout_marginBottom="@dimen/margin_normal">

            <TextView
                android:id="@+id/label_card_expiration_date"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/label_card_expiration_date" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/card_expiration_month_layout"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense.ExposedDropdownMenu"
                android:layout_width="160dp"
                android:layout_height="wrap_content"
                android:layout_below="@+id/label_card_expiration_date"
                android:layout_marginStart="@dimen/margin_big"
                android:hint="@string/hint_card_expiration_month"
                app:counterMaxLength="2"
                app:endIconMode="dropdown_menu"
                app:startIconContentDescription="@string/content_description_card_expiration_month"
                app:startIconDrawable="@drawable/ic_baseline_date_range_24">

                <AutoCompleteTextView
                    android:id="@+id/card_expiration_month"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="none"
                    android:maxLines="1"
                    tools:ignore="LabelFor" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/card_expiration_year_layout"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense.ExposedDropdownMenu"
                android:layout_width="160dp"
                android:layout_height="wrap_content"
                android:layout_below="@+id/label_card_expiration_date"
                android:layout_alignParentEnd="true"
                android:layout_marginEnd="@dimen/margin_big"
                android:hint="@string/hint_card_expiration_year"
                app:counterMaxLength="4"
                app:endIconMode="dropdown_menu"
                app:startIconContentDescription="@string/content_description_card_expiration_year"
                app:startIconDrawable="@drawable/ic_baseline_date_range_24">

                <AutoCompleteTextView
                    android:id="@+id/card_expiration_year"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="none"
                    android:maxLines="1"
                    tools:ignore="LabelFor" />

            </com.google.android.material.textfield.TextInputLayout>
        </RelativeLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/card_security_code_layout"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/card_expiration_layout"
            android:layout_marginTop="@dimen/margin_normal"
            android:layout_marginBottom="@dimen/margin_normal"
            android:hint="@string/hint_card_security_code"
            app:counterEnabled="true"
            app:counterMaxLength="3"
            app:endIconMode="password_toggle"
            app:errorEnabled="true"
            app:helperText="@string/helper_text_card_security_code"
            app:helperTextEnabled="true"
            app:startIconContentDescription="@string/content_description_card_security_code"
            app:startIconDrawable="@drawable/ic_baseline_lock_24">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/card_security_code"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="number"
                android:maxLength="3"
                android:maxLines="1" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/card_brand_layout"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense.ExposedDropdownMenu"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/card_security_code_layout"
            android:hint="@string/hint_card_brand"
            app:errorEnabled="true"
            app:startIconContentDescription="@string/content_description_card_brand"
            app:startIconDrawable="@drawable/ic_baseline_credit_card_24">

            <AutoCompleteTextView
                android:id="@+id/card_brand"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="none"
                android:maxLines="1"
                tools:ignore="LabelFor" />

        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/verify"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:text="@string/text_verify_button" />

    </RelativeLayout>

    <LinearLayout
        android:id="@+id/result_content"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:visibility="invisible"
        android:orientation="vertical"
        tools:context=".MainActivity">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/margin_normal"
            android:text="@string/label_result"
            android:textSize="16sp"
            android:textStyle="bold" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/margin_normal"
                android:text="@string/label_status"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/result_status"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/margin_normal"
                android:text="@string/label_provider_return_code"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/result_provider_return_code"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/margin_normal"
                android:text="@string/label_provider_return_message"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/result_provider_return_message"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/margin_normal"
                android:text="@string/label_provider"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/result_bin_data_provider"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/margin_normal"
                android:text="@string/label_card_type"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/result_bin_data_card_type"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/margin_normal"
                android:text="@string/label_foreign_card"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/result_bin_data_foreign_card"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/margin_normal"
                android:text="@string/label_code"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/result_bin_data_code"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/margin_normal"
                android:text="@string/label_message"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/result_bin_data_message"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/margin_normal"
                android:text="@string/label_corporate_card"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/result_bin_data_corporate_card"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/margin_normal"
                android:text="@string/label_issuer"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/result_bin_data_issuer"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/margin_normal"
                android:text="@string/label_issuer_code"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/result_bin_data_issuer_code"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/margin_normal"
                android:text="@string/label_card_bin"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/result_bin_data_card_bin"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/margin_normal"
                android:text="@string/label_last_four_digits"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/result_bin_data_last_four"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

        </LinearLayout>

    </LinearLayout>

    <ListView
        android:id="@+id/errors_list_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_normal" />

    <Button
        android:id="@+id/backToForm"
        android:layout_alignParentBottom="true"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/text_back_button"
        android:visibility="invisible"/>

</RelativeLayout>